# gsv

./: .gitignore  CHANNELS.md  README.md  TODOS.md  VISION.md  install.sh
.github/workflows/: ci.yml  release.yml
channels/discord/: package.json  wrangler.jsonc
channels/discord/src/: discord-gateway.ts  index.ts  types.ts
channels/whatsapp/src/: index.ts  whatsapp-account.ts
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  connection.rs  deploy.rs  lib.rs  logger.rs  main.rs  protocol.rs  transfer.rs
cli/src/tools/: bash.rs  mod.rs
cli/tests/: tools_test.rs
docs/: SKILLS_CONFIG.md  UI_REACT_REWRITE_PLAN.md
docs/explanation/: agent-loop.md
docs/reference/: native-tools.md
gateway/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
gateway/alchemy/: cli.ts  deploy.ts  destroy.ts  infra.ts
gateway/alchemy/e2e/: gateway.test.ts
gateway/alchemy/wizard/: bin.ts  index.ts  prompter.ts  types.ts
gateway/src/: channel-interface.ts  commands.ts  config.ts  gateway.ts  index.ts  session.ts  transcription.ts  types.ts  workspace-tools.ts  workspace.ts
gateway/src/agents/: prompt.test.ts  prompt.ts
gateway/src/config/: config.test.ts  defaults.ts  index.ts  parsing.ts
gateway/src/cron/: service.ts  store.ts
gateway/src/gateway/: async-exec-state.ts  capabilities.test.ts  capabilities.ts  do.ts  (+9 more)
gateway/ui/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: deploy-local.sh  setup-deps.sh
templates/workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
(+78 files in other folders)
